exports[`reducers > network should handle decrement outstanding requests 1`] = `
Object {
  "error": null,
  "outstandingRequests": -1,
}
`;

exports[`reducers > network should handle default state 1`] = `
Object {
  "error": null,
  "outstandingRequests": 0,
}
`;

exports[`reducers > network should handle increment outstanding requests 1`] = `
Object {
  "error": null,
  "outstandingRequests": 1,
}
`;

exports[`reducers > network should handle lock ui with error 1`] = `
Object {
  "error": "mockError",
  "outstandingRequests": 0,
}
`;
